二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/NV_STUDY/app/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-ns
  name: springboot-deployment
  labels:
    app: springboot-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: nvxhub.nvxclouds.net:9443/skadi/app:v1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: java-cm
