二进制实战部署/杭州I部署yaml/kubernetes/deploy_work/NV_STUDY/app/springboot-ingress.yaml
#ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: study-ns
  name: springboot-ingress
spec:
  rules:
  - host: nv.study.com
    http:
      paths:
      - path: /springboot
        backend:
          serviceName: springboot-service
          servicePort: 80
